Your update message here

--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -35,7 +35,8 @@
           <p><strong>Facilities:</strong> <%= home.facilities %></p>
      
           <br> 
-           <a class="bookButton" href="/homes/<%= home.id %>">detail</a>
+<a class="bookButton" href="/homes/<%= home._id.toString() %>">detail</a>
+
            <br> 
             <br> 
 
