--- a/views/partials/favorite.ejs
+++ b/views/partials/favorite.ejs
@@ -1,5 +1,10 @@
 <form action="/favoritehome" method="POST">
-  <button type="hidden" name="id" value="<%=home.id %>" class="favouritebutton">
+  <button
+    type="hidden"
+    name="id"
+    value="<%=home._id %>"
+    class="favouritebutton"
+  >
     Add to Favorite
   </button>
 </form>
