--- a/views/store/booking.ejs
+++ b/views/store/booking.ejs
@@ -1,23 +1,20 @@
-<%- include('../partials/head') %> 
-  </head>
-  <body>
-    <!-- Navigation -->
+<%- include('../partials/homeeee') %> 
+</head>
+<body>
+  <!-- Navigation -->
     <nav>
       <ul class="navbar">
         <li><a href="/">index-page</a></li>
         <li><a href="/homes">Home list </a></li>
-        <li><a href="/favouritehome">favorite</a></li>
+        <li><a href="/favoritehome">favorite</a></li>
         <li><a href="/booking-list">Booking List</a></li>
         <li><a href="/host/hosthome">host home </a></li>
         <li><a href="/host/add-home">Add Home</a></li>
       </ul>
     </nav>
-
-    <!-- Main Content -->
-    <header>
-      <h1>Our Booking is Here</h1>
-    </header>
-
-    <main class="booking-container"></main>
-  </body>
+  <!-- ✅ Main Content -->
+  <main class="card-container">
+ 
+  </main>
+</body>
 </html>
