--- a/views/store/index.ejs
+++ b/views/store/index.ejs
@@ -2,11 +2,11 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav>
+     <nav>
       <ul class="navbar">
-        <li><a href="/">index page </a></li>
+        <li><a href="/">index-page</a></li>
         <li><a href="/homes">Home list </a></li>
-        <li><a href="/favouritehome">favorite</a></li>
+        <li><a href="/favoritehome">favorite</a></li>
         <li><a href="/booking-list">Booking List</a></li>
         <li><a href="/host/hosthome">host home </a></li>
         <li><a href="/host/add-home">Add Home</a></li>
