--- a/views/host/edit-home.ejs
+++ b/views/host/edit-home.ejs
@@ -1,30 +1,30 @@
-<%- include('../partials/homeeee') %>
+<%- include('../partials/edi') %>
 
 </head>
 <body>
 
   <!-- Top navigation -->
-  <nav>
-    <ul class="navbar">
-      <li><a href="/">index-page</a></li>
-      <li><a href="/homes">Home list</a></li>
-      <li><a href="/favourites">Favorite Home</a></li>
-      <li><a href="/booking-list">Booking List</a></li>
-      <li><a href="/host/hosthome">Host Home</a></li>
-      <li><a href="/host/add-home">Add Home</a></li>
-    </ul>
-  </nav>
-
+     <nav>
+      <ul class="navbar">
+        <li><a href="/">index-page</a></li>
+        <li><a href="/homes">Home list </a></li>
+        <li><a href="/favoritehome">favorite</a></li>
+        <li><a href="/booking-list">Booking List</a></li>
+        <li><a href="/host/hosthome">host home </a></li>
+        <li><a href="/host/add-home">Add Home</a></li>
+      </ul>
+    </nav>
   <header>
     <h1><%= editing ? "Edit your home on airbnb " : "Register" %> your home on Airbnb</h1>
   </header>
 
   <main>
     <!-- ✅ Correct form action URL for both edit and add -->
-   <form action="/host/<%= editing && home ? 'edit-home/' + home.id : 'add-home' %>" method="POST" enctype="multipart/form-data">
+<form action="/host/<%= editing && home ? 'edit-home/' + home._id : 'add-home' %>" method="POST" enctype="multipart/form-data">
+
 
       <% if (editing && home) { %>
-        <input type="hidden" name="id" value="<%= home.id %>">
+        <input type="hidden" name="id" value="<%= home._id %>">
         <input type="hidden" name="existingImage" value="<%= home.houseImages %>">
 
        
