--- a/views/host/homeAdded.ejs
+++ b/views/host/homeAdded.ejs
@@ -3,15 +3,14 @@
   <body>
     <nav>
       <ul class="navbar">
-        <li><a href="/">index-page </a></li>
+        <li><a href="/">index-page</a></li>
         <li><a href="/homes">Home list </a></li>
-        <li><a href="/favoritehome">Favorite</a></li>
+        <li><a href="/favoritehome">favorite</a></li>
         <li><a href="/booking-list">Booking List</a></li>
         <li><a href="/host/hosthome">host home </a></li>
         <li><a href="/host/add-home">Add Home</a></li>
       </ul>
     </nav>
-
     <header>
       <h1>Successfully registered your house name</h1>
     </header>
