--- a/views/partials/edi.ejs
+++ b/views/partials/edi.ejs
@@ -4,6 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home</title>
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/edo.css" />
   </head>
 </html>
