--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -1,23 +1,18 @@
-<%- include('../partials/head') %> 
+<%- include('../partials/homelist') %> 
 </head>
 <body>
 
  <!-- Top Navbar -->
-<nav>
-    <ul class="navbar">
-          <li><a href="/">index-page</a></li>
-         <li><a href="/homes">Home list </a></li>
-       <li><a href="/favouritehome">favorite</a></li>
-      <li><a href="/booking-list">Booking List</a></li>
-       <li><a href="/host/hosthome">host home </a></li>
-          <li><a href="/host/add-home">Add Home</a></li>
-    </ul>
-  </nav>
-
-
-  <!-- Main Header -->
-
-   
+    <nav>
+      <ul class="navbar">
+        <li><a href="/">index-page</a></li>
+        <li><a href="/homes">Home list </a></li>
+        <li><a href="/favoritehome">favorite</a></li>
+        <li><a href="/booking-list">Booking List</a></li>
+        <li><a href="/host/hosthome">host home </a></li>
+        <li><a href="/host/add-home">Add Home</a></li>
+      </ul>
+    </nav>
   <main class="card-container">
     <% registeredHomes.forEach((home) => { %>
       <div class="card">
