--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -33,9 +33,10 @@
 <a class="bookButton" href="/homes/<%= home._id.toString() %>">detail</a>
 
            <br> 
-            <br> 
+           <br>
 
-            <%- include('../partials/favorite', {home:home}) %>
+           <a href="/favoritehome" class="btn btn-favorite">Favorite</a>
+
          
         </div>
       </div>
