--- a/views/store/index.ejs
+++ b/views/store/index.ejs
@@ -15,6 +15,7 @@
          <li><a href="/logout">logout</a></li>
         <% }  else {%> 
             <li><a href="/userlogin"> login</a></li>
+            <li><a href="/userlogin"> signout</a></li>
             <% } %>
       </ul>
     </nav>
