--- a/public/css/home.css
+++ b/public/css/home.css
@@ -120,3 +120,16 @@ nav {
     text-align: center;
   }
 }
+.btn-favorite {
+  padding: 8px 16px;
+  background-color: #ff5a5f;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+}
+.btn-favorite:hover {
+  background-color: #e0484c;
+}
+
