--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -30,12 +30,22 @@
           <p><strong>Facilities:</strong> <%= home.facilities %></p>
      
           <br> 
-<a class="bookButton" href="/homes/<%= home._id.toString() %>">detail</a>
+<a class="bookButton" 
+   href="/homes/<%= home._id.toString() %>" 
+   style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border: none; border-radius: 5px; cursor: pointer; text-align: center;">
+   🔍 View Details
+</a>
 
-           <br> 
-           <br>
 
-           <a href="/favoritehome" class="btn btn-favorite">Favorite</a>
+           
+          
+
+  <form action="/favoritehome" method="POST" style="margin-top: 10px; text-align: center;">
+  <input type="hidden" name="id" value="<%= home._id %>">
+  <button type="submit" style="padding: 10px 20px; background-color: #ff5a5f; color: white; border: none; border-radius: 5px; cursor: pointer;">
+    ❤️ Add to Favorites
+  </button>
+</form>
 
          
         </div>
