--- a/views/host/hosthome-list.ejs
+++ b/views/host/hosthome-list.ejs
@@ -9,6 +9,7 @@
         <li><a href="/booking-list">Booking List</a></li>
         <li><a href="/host/hosthome">host home </a></li>
         <li><a href="/host/add-home">Add Home</a></li>
+           <li><a href="/logout">logout</a></li>
       </ul>
     </nav>
     <header>
