--- a/views/host/hosthome.ejs
+++ b/views/host/hosthome.ejs
@@ -19,25 +19,32 @@
 
   <!-- Main Header -->
    <header> <h1> your home display succesfully here </h1></header>
-   
+
   <main class="card-container">
+
     <% registeredHomes.forEach(home => { %>
+                                    <% if (home.createdBy && user && String(home.createdBy) === String(user._id)) { %>
       <div class="card">
+
        <img
           src="/uploads/<%= home.houseImages %>"
           alt="Image of <%= home.houseName %>" 
         />
         <div class="card-content">
+
           <h2><%= home.houseName %></h2>
           <p><strong>Location:</strong> <%= home.location %></p>
           <p><strong>Price/Day:</strong> ₹<%= home.pricePerDay %></p>
           <p><strong>Nights:</strong> <%= home.numberOfNights %></p>
           <p><strong>Rooms:</strong> <%= home.numberOfRooms %></p>
           <p><strong>Facilities:</strong> <%= home.facilities %></p>
-         <a href="/host/edit-home/<%=home._id%>/?editing=true" class="btn-edit">Edit</a>
-      <form action="/host/delete-home/<%= home._id %>" method="POST">
-  <button class="btn-delete">🗑️ Delete</button>
-</form>
+
+  <a href="/host/edit-home/<%= home._id %>?editing=true" class="btn-edit">Edit</a>
+  <form action="/host/delete-home/<%= home._id %>" method="POST">
+    <button class="btn-delete">🗑️ Delete</button>
+  </form>
+<% } %>
+
           
         </div>
       </div>
