--- a/views/store/favoritehome.ejs
+++ b/views/store/favoritehome.ejs
@@ -22,7 +22,7 @@
     <%favoriteHomes.forEach((home) => { %>
       <div class="card">
         <img
-          src="/uploads/<%= home.houseImages %>"
+          src="<%= home.houseImages %>"
           alt="Image of <%= home.houseName %>"
         />
 
