--- a/views/store/home-detail.ejs
+++ b/views/store/home-detail.ejs
@@ -13,7 +13,7 @@
     <main>
       <div class="card">
         <img
-          src="/uploads/<%= home.houseImages %>"
+          src="<%= home.houseImages %>"
           alt="Image of <%= home.houseName %>"
         />
 
