--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -19,7 +19,7 @@
     <% registeredHomes.forEach((home) => { %>
       <div class="card">
         <img
-          src="/uploads/<%= home.houseImages %>"
+          src="<%= home.houseImages %>"
           alt="Image of <%= home.houseName %>"
         />
 
