--- a/views/host/hosthome.ejs
+++ b/views/host/hosthome.ejs
@@ -27,7 +27,7 @@
       <div class="card">
 
        <img
-          src="/uploads/<%= home.houseImages %>"
+          src="<%= home.houseImages %>"
           alt="Image of <%= home.houseName %>" 
         />
         <div class="card-content">
